GNOME Bugzilla – Bug 730912
eglglessink: Crash when using "gst-launch-1.0 videotestsrc ! eglglessink" pipeline
Last modified: 2014-05-29 16:14:09 UTC
Created attachment 277432 [details] [review] fix for the issue With gst-plugins-bad 1.2 branch, eglglessink crashes when using "gst-launch-1.0 videotestsrc ! eglglessink" pipeline. eglglessink doesn't disables vertex attribute arrays enabled for a GL program when switched to other program. Hence when using 2nd program GL will try to read from arrays enabled for 1st program, which results to crash. Attaching the change to fix this issue.
Review of attachment 277432 [details] [review]: Thanks for the patch. I think it makes more sense to enable the arrays used for the program, and then afterwards disable them again. Instead of disabling arrays of other programs first and then enabling the own arrays. Can you update the patch accordingly? Also please be aware that eglglessink is removed in 1.3 and replaced by glimagesink.
Created attachment 277446 [details] [review] Updated change Thanks for the info. I will take a look at glimagesink to see if similar change is required. Ubuntu 14.04LTS defaults to 1.2 hence fixing in this branch.
Comment on attachment 277446 [details] [review] Updated change Looks good
commit cfcec5f772a82a083acf66dc3bbb42a3c6136bc6 Author: Yogish Kulkarni <yogishk@nvidia.com> Date: Thu May 29 10:56:31 2014 +0530 eglglessink: Disable vertex attribute arrays after drawing Enable vertex attribute arrays which will be used by a GL program and disable them after drawing. If a vertex attribute array not required by a program is enabled, GL will try to read from it, which may crash the application. https://bugzilla.gnome.org/show_bug.cgi?id=730912