eglglessink: Disable vertex attribute arrays after drawing

Enable vertex attribute arrays which will be used by a GL program
and disable them after drawing. If a vertex attribute array not
required by a program is enabled, GL will try to read from it,
which may crash the application.

https://bugzilla.gnome.org/show_bug.cgi?id=730912